@@ -1,3 +1,9 @@
+2005-12-20  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* include/am_utils.h, conf/transp/transp_tli.c (amu_svc_register,
+	register_autofs_service): use a consistent prototype for the
+	dispatch function of the autofs service de/registration functions.
+
 2005-12-03  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* minor new ports: i386-unknown-netbsdelf2.1,
